--- a/src/SPCoder.SharePoint.Client/packages.config
+++ b/src/SPCoder.SharePoint.Client/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="AngleSharp" version="0.9.9.2" targetFramework="net45" />
   <package id="AppForSharePointOnlineWebToolkit" version="3.1.5" targetFramework="net45" />
+  <package id="Camlex.Client.dll" version="4.0.0" targetFramework="net47" />
+  <package id="EPPlus" version="4.5.3.2" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.Azure.ActiveDirectory.GraphClient" version="2.1.0" targetFramework="net45" />
@@ -17,8 +19,10 @@
   <package id="Microsoft.IdentityModel.Logging" version="5.2.4" targetFramework="net45" requireReinstallation="true" />
   <package id="Microsoft.IdentityModel.Tokens" version="5.2.4" targetFramework="net45" requireReinstallation="true" />
   <package id="Microsoft.Office.Client.Policy" version="15.0.0" targetFramework="net45" />
-  <package id="Microsoft.SharePointOnline.CSOM" version="16.1.8412.1200" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
+  <package id="Microsoft.SharePointOnline.CSOM" version="16.1.19515.12000" targetFramework="net47" />
+  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net47" />
+  <package id="SharePointPnP.IdentityModel.Extensions" version="1.2.4" targetFramework="net47" />
+  <package id="SharePointPnPCoreOnline" version="3.16.1912" targetFramework="net47" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.2.4" targetFramework="net45" requireReinstallation="true" />
   <package id="System.IO" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Net.Http" version="4.3.1" targetFramework="net45" requireReinstallation="true" />
