--- a/src/SPCoder.WinApp/app.config
+++ b/src/SPCoder.WinApp/app.config
@@ -23,6 +23,8 @@
   </log4net>
   <appSettings>
     <add key="ConfigPath" value="Config2016\config.xml" />
+    <add key="SettingsFilePath" value="Config2016\settings.json" />
+    
     <!--add key="ClientId" value="XXXX" /-->
     <!--add key="ClientSecret" value="XXXXX=" /-->
   </appSettings>
