--- a/src/SPCoder.SharePoint/SPCoder.SharePoint.csproj
+++ b/src/SPCoder.SharePoint/SPCoder.SharePoint.csproj
@@ -50,7 +50,12 @@
     <Compile Include="Utils\SharePointServerModule.cs" />
     <Compile Include="Utils\SSOMConnector.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\SPCoder.Core\SPCoder.Core.csproj">
+      <Project>{4c10cebc-afa4-425a-a87c-ca04c8bc2d88}</Project>
+      <Name>SPCoder.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
