--- a/src/SPCoder.SharePoint.Client/Properties/Settings.settings
+++ b/src/SPCoder.SharePoint.Client/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="SPCoder_SharePoint_Client_ListsWebService_Lists" Type="(Web Service URL)" Scope="Application">
       <Value Profile="(Default)">http://sp2010/_vti_bin/Lists.asmx</Value>
     </Setting>
+    <Setting Name="SPCoder_SharePoint_Client_UserProfileWebService_UserProfileService" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://sp2010/_vti_bin/userprofileservice.asmx</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
