Added describer and grid viewer properties to configuration. Updates related to versions of nuget packages. Other minor changes.

--- a/src/SPCoder.WinApp/Config2016/settings.json
+++ b/src/SPCoder.WinApp/Config2016/settings.json
@@ -36,6 +36,12 @@
   },
   "explorer": {
     "address": "c:\\",
-    "plugin": "File system"
+    "connector": "File system"
+  },
+  "describer": {
+    "expression": "main"    
+  },
+  "gridViewer": {
+    "expression": ""
   }
 }
