--- a/src/SPCoder.SharePoint.Client/app.config
+++ b/src/SPCoder.SharePoint.Client/app.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="SPCoder.SharePoint.Client.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
   </configSections>
@@ -51,12 +51,10 @@
   </runtime>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7" /></startup><applicationSettings>
     <SPCoder.SharePoint.Client.Properties.Settings>
-      <setting name="SPCoder_SharePoint_Client_ListsWebService_Lists"
-        serializeAs="String">
+      <setting name="SPCoder_SharePoint_Client_ListsWebService_Lists" serializeAs="String">
         <value>http://sp2010/_vti_bin/Lists.asmx</value>
       </setting>
-      <setting name="SPCoder_SharePoint_Client_UserProfileWebService_UserProfileService"
-        serializeAs="String">
+      <setting name="SPCoder_SharePoint_Client_UserProfileWebService_UserProfileService" serializeAs="String">
         <value>http://sp2010/_vti_bin/userprofileservice.asmx</value>
       </setting>
     </SPCoder.SharePoint.Client.Properties.Settings>
