--- a/src/SPCoder.SharePoint.Client/packages.config
+++ b/src/SPCoder.SharePoint.Client/packages.config
@@ -13,6 +13,7 @@
   <package id="Microsoft.Data.Services.Client" version="5.8.4" targetFramework="net45" />
   <package id="Microsoft.Graph" version="1.9.0" targetFramework="net45" />
   <package id="Microsoft.Graph.Core" version="1.9.0" targetFramework="net45" />
+  <package id="Microsoft.Identity.Model.Extensions" version="2.0.1459.0" targetFramework="net47" />
   <package id="Microsoft.IdentityModel" version="6.1.7600.16394" targetFramework="net45" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.19.8" targetFramework="net45" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.2.4" targetFramework="net45" requireReinstallation="true" />
