--- a/src/SPCoder.Core/SPCoder.Core.csproj
+++ b/src/SPCoder.Core/SPCoder.Core.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Utils\Nodes\BaseNode.cs" />
     <Compile Include="Utils\Nodes\LeafNode.cs" />
     <Compile Include="Utils\ObjectModelType.cs" />
+    <Compile Include="Utils\ShellIcon.cs" />
     <Compile Include="Utils\SPCoderConstants.cs" />
   </ItemGroup>
   <ItemGroup>
