--- a/src/SPCoder.Github/SPCoder.Github.csproj
+++ b/src/SPCoder.Github/SPCoder.Github.csproj
@@ -56,5 +56,10 @@
       <Name>SPCoder.Core</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Images\Modules\Github\github.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
