--- a/src/SPCoder.WinApp/Config2016/settings.json
+++ b/src/SPCoder.WinApp/Config2016/settings.json
@@ -21,7 +21,9 @@
       ],
       "xml": [
         "xml",
-        "config"
+        "config",
+        "csproj",
+        "resx"
       ],
       "php": [
         "php"
