Several usability improvements

--- a/src/SPCoder.WinApp/Config2016/settings.json
+++ b/src/SPCoder.WinApp/Config2016/settings.json
@@ -1,6 +1,5 @@
 {
   "code": {
-    "asyncExecution": true,
     "languages": {
       "csharp": [
         "cs",
@@ -37,7 +36,10 @@
     ],
     "history": [
     ],
-    "autocompleteShowExtensionMethods": false
+    "asyncExecution": true,
+    "autocompleteShowExtensionMethods": false,
+    "wordWrap": true,
+    "paragraph": false
   },
   "explorer": {
     "address": "c:\\",
