--- a/src/SPCoder.RunnerApp/App.config
+++ b/src/SPCoder.RunnerApp/App.config
@@ -23,6 +23,8 @@
   </log4net>
   <appSettings>
     <add key="CodePath" value="Code\init.csx" />
+    <add key="WorkingDirectoryPath" value="{{WorkingDirectory}}" />
+    
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7" />
