Adding icons to DotNetPerls connector.

--- a/src/SPCoder.DotNetPerls/SPCoder.DotNetPerls.csproj
+++ b/src/SPCoder.DotNetPerls/SPCoder.DotNetPerls.csproj
@@ -67,5 +67,13 @@
       <Name>SPCoder.Core</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Images\Modules\DNP\csharp.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\Modules\DNP\dnp.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
