Cleaning up the imports and plugins. Other minor improvements

--- a/src/SPCoder.DotNetPerls/SPCoder.DotNetPerls.csproj
+++ b/src/SPCoder.DotNetPerls/SPCoder.DotNetPerls.csproj
@@ -27,7 +27,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\SPCoder.WinApp\bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -58,7 +58,6 @@
     <Compile Include="Utils\Nodes\PageNode.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
