WIP - working folder + file browser + file editor plugin

--- a/src/SPCoder.SharePoint.Client/SPCoder.SharePoint.Client.csproj
+++ b/src/SPCoder.SharePoint.Client/SPCoder.SharePoint.Client.csproj
@@ -202,6 +202,8 @@
     <Compile Include="TokenHelper.cs" />
     <Compile Include="Utils\CSOMConnector.cs" />
     <Compile Include="Utils\Dummy.cs" />
+    <Compile Include="Utils\Nodes\FileNode.cs" />
+    <Compile Include="Utils\Nodes\FolderNode.cs" />
     <Compile Include="Utils\Nodes\ListNode.cs" />
     <Compile Include="Utils\Nodes\SiteNode.cs" />
     <Compile Include="Utils\Nodes\WebNode.cs" />
