--- a/src/SPCoder.Core/SPCoder.Core.csproj
+++ b/src/SPCoder.Core/SPCoder.Core.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Plugins\PluginContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\BaseConnector.cs" />
+    <Compile Include="Utils\BaseEditedFile.cs" />
     <Compile Include="Utils\Common.cs" />
     <Compile Include="Utils\CrossThreadFormsExtensions.cs" />
     <Compile Include="Utils\Delegates.cs" />
