Added enumeration of Content Types. Corrected enumeration of Lists.

--- a/src/SPCoder.SharePoint.Client/SPCoder.SharePoint.Client.csproj
+++ b/src/SPCoder.SharePoint.Client/SPCoder.SharePoint.Client.csproj
@@ -205,6 +205,8 @@
     <Compile Include="TokenHelper.cs" />
     <Compile Include="Utils\CSOMConnector.cs" />
     <Compile Include="Utils\Dummy.cs" />
+    <Compile Include="Utils\Nodes\ContentTypeContainerNode.cs" />
+    <Compile Include="Utils\Nodes\ContentTypeNode.cs" />
     <Compile Include="Utils\Nodes\FileNode.cs" />
     <Compile Include="Utils\Nodes\FolderNode.cs" />
     <Compile Include="Utils\Nodes\ListNode.cs" />
