Adding Fields to treeview for Lists and Webs in CSOMSharePointConnector.

--- a/src/SPCoder.SharePoint.Client/SPCoder.SharePoint.Client.csproj
+++ b/src/SPCoder.SharePoint.Client/SPCoder.SharePoint.Client.csproj
@@ -208,6 +208,8 @@
     <Compile Include="Utils\Dummy.cs" />
     <Compile Include="Utils\Nodes\ContentTypeContainerNode.cs" />
     <Compile Include="Utils\Nodes\ContentTypeNode.cs" />
+    <Compile Include="Utils\Nodes\FieldContainerNode.cs" />
+    <Compile Include="Utils\Nodes\FieldNode.cs" />
     <Compile Include="Utils\Nodes\FileNode.cs" />
     <Compile Include="Utils\Nodes\FolderNode.cs" />
     <Compile Include="Utils\Nodes\ListNode.cs" />
