Minor changes related to custom FBA SharePoint authentication

--- a/src/SPCoder.RunnerApp/App.config
+++ b/src/SPCoder.RunnerApp/App.config
@@ -9,7 +9,7 @@
       <appender-ref ref="RollingLogFileAppender" />
     </logger>
     <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="Log\spcoder-runner.log" />
+      <file type="log4net.Util.PatternString" value="Log\spcoder-runner-[%processid]-%property{RunnerId}.log" />
       <appendToFile value="true" />
       <rollingStyle value="Composite" />
       <datePattern value="yyyyMMdd" />
